[package]
name = "frauth"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2"
async-std = "0.99"
rand = "0.6"
serde_json = "1.0"

[dependencies.ed25519-dalek]
version = "1.0.0-pre.1"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
