[package]
name = "frauth"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
license = "GPL-3.0"


[[bin]]
name = "frauth"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
dialoguer = "0.5.0"
directories = "2.0.2"
ed25519-dalek = { version = "1.0.0-pre.3", features = ["serde"] }
lazy_static = "1.4.0"
rand = "0.7.3"
serde = { version = "1.0.104", features = ["derive"] }
structopt = "0.3.7"
toml = "0.5.5"
