[package]
name = "frauth"
version = "0.2.1"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
license = "GPL-3.0"
description = "The frauth CLI tool"
repository = "https://github.com/jamesmunns/frauth"
homepage = "https://github.com/jamesmunns/frauth"
readme = "../README.md"

[[bin]]
name = "frauth"
path = "src/main.rs"

[dependencies]
base64 = "0.11.0"
dialoguer = "0.5.0"
directories = "2.0.2"
ed25519-dalek = { version = "1.0.0-pre.3", features = ["serde"] }
lazy_static = "1.4.0"
rand = "0.7.3"
serde = { version = "1.0.104", features = ["derive"] }
structopt = "0.3.7"
toml = "0.5.5"
async-std = { version = "1.4.0", features = ["unstable"] }
chrono = { version = "0.4.10", features = ["serde"] }

[dependencies.surf]
version = "1.0"
git = "https://github.com/http-rs/surf"
rev = "516554b26194e24193f1a7ebbc320feb6f4c2fc8"
