[package]
name = "spider-test"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"

[dependencies.async-std]
version = "1.4"
features = ["unstable"]

[dependencies.surf]
version = "1.0"
git = "https://github.com/http-rs/surf"
rev = "516554b26194e24193f1a7ebbc320feb6f4c2fc8"

